
package co.edu.udec.poo.RutaEscolar.dominio;


public enum EstadoAsistente {
    ACTIVO,
    INACTIVO,
    SANCIONADO
}
