package co.edu.udec.poo.RutaEscolar.dominio;

public enum EstadoMinibus {
    DISPONIBLE,
    OCUPADO,
    EN_MANTENIMIENTO,
    FUERA_DE_SERVICIO
}

