
package co.edu.udec.poo.RutaEscolar.dominio;

public enum EstadoPago {
    PENDIENTE,
    CANCELADO
}
