
package co.edu.udec.poo.RutaEscolar.dominio;

public enum EstadoRecorrido {
    EN_PROGRESO,
    FINALIZADO,
    CANCELADO;
}
