
package co.edu.udec.poo.RutaEscolar.dominio;


public enum ModalidadServicio {
    MANANA, 
    MEDIODIA, 
    TARDE, 
    MANANA_MEDIODIA, 
    MANANA_TARDE, 
    MEDIODIA_TARDE; 
}
